# seticore

./: meson.build
python/: pyproject.toml
python/src/seticore/: __init__.py  viewer.py
